--- a/styles/main.css
+++ b/styles/main.css
@@ -8,18 +8,21 @@
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   src: url("../assets/fonts/roboto-italic.woff2") format("woff2");
   font-family: "roboto-st";
   font-weight: 400;
   font-style: italic;
 }
+
 @font-face {
   src: url("../assets/fonts/roboto-bold.woff2") format("woff2");
   font-family: "roboto-st";
   font-weight: 700;
   font-style: normal;
 }
+
 @font-face {
   src: url("../assets/fonts/roboto-bold-italic.woff2") format("woff2");
   font-family: "roboto-st";
@@ -192,6 +195,7 @@ button {
     background-color: #874118;
   }
 }
+
 .food {
   margin-top: 102px;
 
@@ -250,6 +254,7 @@ button {
           opacity: 0.5;
         }
       }
+
       button {
         margin-top: 11px;
       }
@@ -259,7 +264,7 @@ button {
 }
 
 .restaurants {
-  margin-top: 150px;
+  margin-top: 195px;
 
   .sells {
     display: grid;
@@ -271,6 +276,7 @@ button {
       width: 555px;
       background-color: #312f30;
       background-repeat: no-repeat;
+      background-size: cover;
       color: var(--color-white);
 
       .text {
@@ -283,8 +289,10 @@ button {
 
         h3 {
           margin-top: 18px;
+          margin-block-start: unset;
+          margin-block-end: unset;
           font-weight: 500;
-          font-size: 20px;
+          font-size: 30px;
         }
 
         /*&.sell1 {*/
@@ -303,7 +311,7 @@ button {
         .price-firm {
           display: flex;
           align-items: center;
-          margin-top: 13px;
+          margin-top: 11px;
           gap: 6px;
           color: #f6762c;
 
@@ -321,10 +329,12 @@ button {
             opacity: 0.5;
           }
         }
+
         button {
           max-width: 140px;
           max-height: 40px;
           margin-top: 11px;
+          font-size: 12px;
         }
       }
     }
@@ -351,6 +361,150 @@ button {
 
     .sell:nth-child(odd) .text {
       margin: 63px 1px 63px 290px;
+    }
+  }
+}
+
+.our-team {
+  margin-top: 150px;
+
+  .teams {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 120px;
+
+    .circle {
+      position: relative;
+
+      .big-circle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 347px;
+        height: 347px;
+        border: 1px dashed #f6762c;
+        border-radius: 100%;
+      }
+
+      .small-circle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 230px;
+        height: 230px;
+        border: 1px dashed #f6762c;
+        border-radius: 100%;
+
+        .ginger {
+          width: 112px;
+          height: 112px;
+
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            box-shadow: 0 0 80px 1px #f6762c;
+          }
+        }
+      }
+      .black {
+        position: absolute;
+        top: 235px;
+        left: 260px;
+        border-radius: 50%;
+      }
+
+      .blond {
+        position: absolute;
+        top: 5px;
+        left: 235px;
+        border-radius: 50%;
+      }
+
+      .brutal {
+        position: absolute;
+        top: 45px;
+        left: -15px;
+        border-radius: 50%;
+      }
+
+      .gay {
+        position: absolute;
+        top: 280px;
+        left: 55px;
+        border-radius: 50%;
+      }
+    }
+
+
+    .review {
+
+      .coma {
+        text-align: center;
+      }
+
+      .comment {
+        margin-top: 37px;
+        width: 368px;
+        font-weight: 400;
+        font-size: 16px;
+        text-align: center;
+        line-height: 1.25;
+        color: #fff;
+        opacity: 0.7;
+
+      }
+
+      .commentator {
+        margin-top: 27px;
+        font-weight: 500;
+        line-height: 24px;
+        font-size: 24px;
+        text-align: center;
+        color: #fff;
+
+      }
+
+      .nation {
+        margin-top: 2px;
+        font-weight: 500;
+        font-size: 12px;
+        text-align: center;
+        color: #fff;
+        opacity: .7;
+      }
+    }
+  }
+}
+.menu-D {
+  margin-top: 180px;
+
+  .background-button {
+    position: absolute;
+    margin: 0 -14vw;
+    width: 100vw;
+    height: 170px;
+    background-color: #312F30;
+    z-index: -1;
+  }
+
+  .downloads {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 170px;
+    gap: 422px;
+
+    .download {
+      font-weight: 500;
+      font-size: 40px;
+      color: var(--color-white);
+    }
+
+    button {
+      margin-top: 11px;
+      width: 165px;
     }
   }
 }
